fix list item text jumping a line on firefox

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -795,3 +795,7 @@ body .uomcontent .button:hover,
 body .uomcontent .button-small:hover {
   text-decoration: none;
 }
+
+li p {
+  display: inline-block; 
+}
